objects/Product2.object
<CustomObject>
    <sharingModel>Read</sharingModel>
    <fields>
        <fullName>Inventory__c</fullName>
        <label>Inventory</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offer_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Offer Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remaining_Quantity__c</fullName>
        <label>Remaining Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>